--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -10,6 +10,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-web</artifactId>
+
+    <properties>
+
+        <!-- Web dependencies -->
+        <webjars-bootstrap.version>3.3.6</webjars-bootstrap.version>
+        <webjars-jquery-ui.version>1.11.4</webjars-jquery-ui.version>
+        <webjars-jquery.version>2.2.4</webjars-jquery.version>
+        <wro4j.version>1.8.0</wro4j.version>
+
+
+    </properties>
 <dependencies>
     <dependency>
         <artifactId>pet-clinic-data</artifactId>
@@ -34,6 +45,34 @@
         <scope>runtime</scope>
         <optional>true</optional>
     </dependency>
+    <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M4</version>
+        <type>maven-plugin</type>
+    </dependency>
+
+    <!-- webjars -->
+    <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>webjars-locator-core</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>jquery</artifactId>
+        <version>${webjars-jquery.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>jquery-ui</artifactId>
+        <version>${webjars-jquery-ui.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>bootstrap</artifactId>
+        <version>${webjars-bootstrap.version}</version>
+    </dependency>
+    <!-- end of webjars -->
 
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -41,5 +80,40 @@
         <scope>test</scope>
     </dependency>
 </dependencies>
-
+<build>
+    <plugins>
+        <plugin>
+            <groupId>ro.isdc.wro4j</groupId>
+            <artifactId>wro4j-maven-plugin</artifactId>
+            <version>${wro4j.version}</version>
+            <executions>
+                <execution>
+                    <phase>generate-resources</phase>
+                    <goals>
+                        <goal>run</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
+                <cssDestinationFolder>${project.build.directory}/classes/static/resources/css</cssDestinationFolder>
+                <wroFile>${basedir}/src/main/wro/wro.xml</wroFile>
+                <extraConfigFile>${basedir}/src/main/wro/wro.properties</extraConfigFile>
+                <contextFolder>${basedir}/src/main/less</contextFolder>
+            </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>bootstrap</artifactId>
+                    <version>${webjars-bootstrap.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-core</artifactId>
+                    <version>${mockito.version}</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+    </plugins>
+</build>
 </project>
